fix(DatePickerComponent): DatePicker actions vertical alignment with the input field

--- a/src/component/date-picker/date-picker.component.scss
+++ b/src/component/date-picker/date-picker.component.scss
@@ -23,7 +23,9 @@ deja-date-picker {
 			}
 
 			[fontIcon] {
-				font-size: 100%;
+                font-size: 100%;
+                width: 1em;
+                height: 1em;
 			}
 		}
 	}
